Worked on most of the parts of the app

--- a/assignment2_AHR9OI/client/src/styles.css
+++ b/assignment2_AHR9OI/client/src/styles.css
@@ -1,1 +1,153 @@
-/* You can add global styles to this file, and also import other style files */
+body {
+    font-family: 'Nunito', sans-serif;
+}
+.main {
+    height: 92vh; /* Find a better solution */
+}
+a {
+    text-decoration: none;
+    color: inherit;
+}
+ul {
+    list-style: none;
+}
+a:hover {
+    color: inherit;
+}
+.appbg-light {
+    background-color: #ffffff;
+}
+.appbg-dark {
+    background-color: #2d3e4e;
+}
+.appcard {
+    max-width: 700px;
+    margin: 50px auto;
+    /*padding: 30px;*/
+    text-align: justify;
+    border-radius: 15px;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
+    /*box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px; shadow no border */
+}
+.appcard-header {
+    width: 100%;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+    background-color: #414141;
+    color: rgb(255, 255, 255);
+    padding: 15px;
+    font-weight: bold;
+}
+.appcard-body {
+    padding: 20px;
+}
+.appcard-dark {
+    color: rgb(255, 255, 255);
+    background-color: #34465a;
+}
+.appcard-light {
+    color: rgb(26, 26, 26);
+    background-color: #ffffff;
+}
+.appbtn-primary {
+    background-color: #414141;
+    border: none;
+    color:rgb(255, 255, 255);
+    font-weight: bold;
+}
+.appbtn-outlined-light {
+    border: 1px solid rgb(210, 210, 210);
+    color:rgb(210, 210, 210);
+    font-weight: bold;
+}
+.appbtn-outlined-light:hover {
+    color:rgb(190, 190, 190);
+}
+.appbtn-danger {
+    background-color: #ff2e2e;
+    border: none;
+    color:rgb(255, 255, 255);
+    font-weight: bold;
+}
+.appbtn-primary:hover{
+    color:rgb(228, 228, 228);
+}
+.appbtn-danger:hover{
+    color:rgb(228, 228, 228);
+}
+.max-w-7 {
+    max-width: 70%;
+}
+.fieldset {
+    border: 1px solid rgb(226, 226, 226);
+    border-radius: 5px;
+    padding: 10px;
+}
+.description {
+    background-color: rgb(236, 236, 236);
+    color: rgb(48, 48, 48);
+    border-radius: 5px;
+    padding: 20px;
+    margin: 20px;
+    text-align: justify;
+}
+.action-buttons {
+    margin: 20px;
+    text-align: right;
+}
+/*  Typography */
+.typography {
+    margin: 20px;
+    text-align: left;
+}
+.bold {
+    font-weight: bold;
+}
+.note {
+    font-weight: initial;
+    font-style: italic;
+    font-size: 16px;
+    color: rgb(116, 116, 116);
+}
+/* badges */
+.appbadge {
+    background-color: #f5f5f5;
+    color: rgb(26, 26, 26);
+    font-size: 13px;
+    padding: 5px;
+    border-radius: 5px;
+}
+.appbadge:hover{
+    color:rgb(228, 228, 228);
+}
+.appbadge-primary {
+    background-color: #414141;
+    color:rgb(255, 255, 255);
+}
+.appbadge-secondary {
+    background-color: #25a8ff;
+    color:rgb(255, 255, 255);
+}
+.appbadge-danger {
+    background-color: #ff2e2e;
+    color:rgb(255, 255, 255);
+}
+
+.editor { 
+    position: relative;
+    background-color: rgb(245, 245, 245);
+    width: 95%;
+    height: 300px;
+    margin: 20px;
+    padding-top: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 13px;
+    border-radius: 5px;
+    border: none;
+    resize: none;
+}
+.editor:focus{
+    outline: none;
+}
