--- a/assignment2_AHR9OI/client/src/app/app.component.html
+++ b/assignment2_AHR9OI/client/src/app/app.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" routerLink="/">Diary</a>
+  <a class="navbar-brand" routerLink="/">DiaryApp</a>
   <button
     class="navbar-toggler"
     type="button"
@@ -16,7 +16,7 @@
   <div [ngbCollapse]="isMenuCollapsed" class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
-        <a class="nav-link" routerLink="/diaries" (click)="isMenuCollapsed = true">Diaries</a>
+        <a class="nav-link" routerLink="/diaries" (click)="isMenuCollapsed = true">Diary</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" routerLink="/about" (click)="isMenuCollapsed = true">About</a>
