--- a/assignment2_AHR9OI/client/src/app/diary-form/diary-form.component.html
+++ b/assignment2_AHR9OI/client/src/app/diary-form/diary-form.component.html
@@ -1,6 +1,4 @@
 <!-- new diary page -->
-<h2 class="display-4 my-5">New Diary</h2>
-
 <form [formGroup]="diaryForm" (ngSubmit)="onSubmit()">
   <div class="form-group">
     <label for="title">Title</label>
@@ -21,6 +19,7 @@
     <textarea
       class="form-control"
       id="text"
+      placeholder="Text"
       rows="5"
       required
       formControlName="text"
@@ -29,20 +28,18 @@
     ></textarea>
     <div class="invalid-feedback">Please provide a text for your diary!</div>
   </div>
-  <div class="form-group">
-    <label for="date">Date</label>
-    <input
-      type="date"
-      class="form-control"
-      id="date"
-      placeholder="Date"
-      required
-      formControlName="date"
-      [class.is-invalid]="date.invalid && (date.dirty || date.touched)"
-      [class.is-valid]="date.valid"
-    />
-    <div class="invalid-feedback" *ngIf="date.invalid && date.errors.required">Please provide a date!</div>
-  </div>
+  
+  <!-- hidden date input -->
+  <input
+    type="text"
+    class="form-control"
+    id="date"
+    hidden
+    formControlName="date"
+    [class.is-invalid]="date.invalid && (date.dirty || date.touched)"
+    [class.is-valid]="date.valid"
+  />
+  <div class="invalid-feedback" *ngIf="date.invalid && date.errors.required">Please provide a date!</div>
 
-  <button type="submit" class="btn appbtn-primary" [disabled]="diaryForm.invalid">Save</button>
+  <button type="submit" class="btn appbtn-primary">Save</button>
 </form>
