--- a/assignment2_AHR9OI/client/src/app/diary-list/diary-list.component.html
+++ b/assignment2_AHR9OI/client/src/app/diary-list/diary-list.component.html
@@ -4,23 +4,33 @@
     <div class="display-4">My diaries</div>
   </div>
   <div class="col col-lg-2">
-    <a class="btn appbtn-primary col-lg-10" routerLink="/diaries/new" role="button">New Diary</a>
+    <a class="btn appbtn-primary col-lg-10 mt-4" routerLink="/diaries/new" role="button">New Diary</a>
   </div>
 </div>
     
-<div class="row mt-5">
-  <div class="list-group col">
+<div class="mt-5">
+  <div class="list-group">
     <a
       *ngFor="let diary of diaries"
       class="list-group-item list-group-item-action"
       (click)="selectedDiary = diary"
       [routerLink]="['/diary', diary.id]"
     >
-      <div class="d-flex w-100 justify-content-between align-items-center">
-        <h5 class="mb-1">{{ diary.title }}</h5>
+    <div class="row">
+      <div class="col col-lg-11">
+        <div class="d-flex w-100 justify-content-between align-items-center">
+          <h5 class="mb-1">{{ diary.title }}</h5>
+        </div>
+        <p class="mb-1">{{ diary.text }}</p>
+        <small>{{ diary.date }}</small>
       </div>
-      <p class="mb-1">{{ diary.text }}</p>
-      <small>{{ diary.date }}</small>
+  
+      <div class="col col-lg-1">
+        <a class="btn appbtn-primary mt-3" [routerLink]="['/diary', diary.id, 'edit']" role="button">
+          <i class="fa fa-pen" aria-hidden="true"></i>
+        </a>
+      </div>
+    </div>
     </a>
   </div>
   <div class="col" *ngIf="selectedDiary">
