Fixed date when updating a record

--- a/assignment2_AHR9OI/client/src/app/diary-list/diary-list.component.html
+++ b/assignment2_AHR9OI/client/src/app/diary-list/diary-list.component.html
@@ -36,7 +36,7 @@
         <small>{{ diary.date }}</small>
       </div>
   
-      <div class="col col-lg-1">
+      <div class="col col-lg-1 col-12">
         <a class="btn appbtn-primary mt-3" [routerLink]="['/diary', diary.id, 'edit']" role="button">
           <i class="fa fa-pen" aria-hidden="true"></i>
         </a>
