--- a/assignment2_AHR9OI/client/src/app/main-page/main-page.component.html
+++ b/assignment2_AHR9OI/client/src/app/main-page/main-page.component.html
@@ -1,13 +1,13 @@
 <!-- main page -->
 <div class="jumbotron">
     <div class="row">
-      <div class="col col-lg-9">
+      <div class="col col-lg-9 col-12">
         <h1 class="display-4">{{ app_title }}</h1>
         <div class="dark-description">
           {{ app_description }}
         </div>
       </div>
-      <div class="col">
+      <div class="col col-lg-3 col-12">
         <img class="main-image mt-4" src="assets/img/diary.png">
       </div>
     </div>
